# c_music_player

./: README.md
cmp_code/: .gitignore  CMakeLists.txt  Config.cpp  Config.h  Database.cpp  Database.h  View.cpp  View.h  cmp.cpp  makefile
cmp_code/libraries/: config.h
cmp_code/src/: CMakeLists.txt  cmp.cpp  config.txt
cmp_code/src/config/: CMakeLists.txt  Config.h
cmp_code/src/control/: CMakeLists.txt  Control.cpp  Control.h
cmp_code/src/database/: CMakeLists.txt  Database.cpp  Database.h
cmp_code/src/view/: CMakeLists.txt  View.cpp  View.h
cmp_code/tests/: unit_test.cpp
system_design/: music_player_design.xmi
